fix for potion of favourite button; align of similar photos

--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -25,8 +25,8 @@
 }
 
 .photo-details-modal__images {
-  margin-left: 36px;
-  margin-top: 8px;
+  width: 80%;
+  margin: auto;
 }
 
 .photo-details-modal__image {
