--- a/frontend/src/styles/PhotoFavButton.scss
+++ b/frontend/src/styles/PhotoFavButton.scss
@@ -13,6 +13,6 @@
 }
 
 .photo-list--fav-icon-svg {
-  position: relative;
+  padding: 7px;
   top: 2px;
 }
